# course_work_4

./: README.md  main.py  pyproject.toml
src/: HHVacanciesList.py  JSONSaver.py  Vacancy.py  functions.py
tests/: test_vacancy.py
